--- a/app/src/main/res/layout/frag_down_3_active_1_row_1.xml
+++ b/app/src/main/res/layout/frag_down_3_active_1_row_1.xml
@@ -150,7 +150,7 @@
                     android:singleLine="true"
                     android:text="@string/text__"
                     android:textColor="@color/color_text_hint"
-                    android:textSize="@dimen/smaller_text_size"
+                    android:textSize="@dimen/smallest_text_size"
                     tools:ignore="TextContrastCheck" />
             </RelativeLayout>
 
